--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "cli-creating-test",
+  "name": "universalstack",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "universalstack": "node index.js"
+  },
+  "bin": {
+    "universalstack": "./index.js"
   },
   "keywords": [],
   "author": "",
