--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "universalstack",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/username/repository-name.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "universalstack": "node index.js"
@@ -10,23 +14,51 @@
   "bin": {
     "universalstack": "./index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "CLI",
+    "full-stack",
+    "project-setup",
+    "React",
+    "Vite",
+    "Tailwind",
+    "Express",
+    "MongoDB",
+    "MySQL",
+    "JavaScript",
+    "TypeScript",
+    "React Router",
+    "automation",
+    "universal-stack",
+    "developer-tools",
+    "npm-package",
+    "backend-setup",
+    "frontend-setup",
+    "boilerplate",
+    "starter-template",
+    "web-development",
+    "project-generator"
+  ],
+  "author": "Hemanth Das",
+  "license": "MIT",
+  "description": "UniversalStack is a CLI tool for setting up full-stack applications with a customizable configuration. It generates a Vite + React frontend and optionally sets up an Express backend with MongoDB or MySQL support. Additional features include Tailwind CSS, React Router, and various boilerplate files, making it an all-in-one solution for streamlined project initialization.",
+  "devDependencies": {
+    "eslint": "^9.13.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.8.8"
+  },
   "dependencies": {
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
     "child_process": "^1.0.2",
+    "express": "^4.17.1",
     "figlet": "^1.8.0",
     "inquirer": "^12.0.0",
+    "mongoose": "^6.0.0",
+    "mysql2": "^3.11.3",
     "nanospinner": "^1.1.0",
-    "semver": "^7.6.3",
-    "express": "^4.17.1",
-    "vite": "^3.0.0",
     "react-router-dom": "^6.0.0",
+    "semver": "^7.6.3",
     "tailwindcss": "^3.0.0",
-    "mysql2": "^2.0.0",
-    "mongoose": "^6.0.0"
+    "vite": "^3.0.0"
   }
 }
