--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/username/repository-name.git"
+    "url": "https://github.com/HemanthDas/Universal-Stack"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
